--- a/less/variables.less
+++ b/less/variables.less
@@ -3,6 +3,7 @@
   --screen-padding: 15px;
   --spacing: 20px;
   --site-width: 1000px;
+  --site-width-desktop: 1001px;
   --border-radius-small: 4px;
 
   --nord0: #2e3440;
